# mysql-claude-skill

./: .gitignore  .mcp.json  CLAUDE.md  README.md  main.py  pyproject.toml  server.py
.github/workflow/: release.yml
.github/workflows/: release.yml
