[project]
name = "mysql-claude-skill"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.25.0",
    "mysql-connector-python>=9.5.0",
    "python-dotenv>=1.2.1",
]

[project.scripts]
mysql-skill = "server:mcp.run"

[tool.setuptools]
py-modules = ["server"]

[project.urls]
#Homepage = "https://github.com/yourname/mysql-claude-skill"
#Repository = "https://github.com/yourname/mysql-claude-skill"
